--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   rxdart: ^0.27.7
   graphql_flutter: ^5.1.0
   jwt_decode: ^0.3.1
+  syncfusion_flutter_pdfviewer: ^24.2.8
+  syncfusion_flutter_datepicker: ^24.2.9
 
 dev_dependencies:
   flutter_test:
